# mcp-sbom-server

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_sbom/: sbom.json  server.py
